--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "author": "ricardo",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.1",
+    "commander": "^7.2.0",
     "ejs": "^3.1.6",
+    "figlet": "^1.5.0",
+    "fs-extra": "^10.0.0",
     "inquirer": "^8.1.0"
   }
 }
